--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "require": {
         "dnadesign/silverstripe-elemental": "^5",
-        "dynamic/silverstripe-carousel": "^1@dev",
+        "dynamic/silverstripe-carousel": "^1",
         "silverstripe/framework": "^5.0"
     },
     "require-dev": {
@@ -25,7 +25,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-main": "1.x-dev"
+            "dev-master": "1.x-dev"
         }
     }
 }
